force-app/main/default/objects/CLQ_Case_Action_Details__c/CLQ_Case_Action_Details__c.object-meta.xml
<CustomObject>
    <description>Different Actions that can be taken on a case</description>
    <label>Case Action Detail</label>
    <nameField>
        <displayFormat>CAD-{00000000}</displayFormat>
        <label>Case Action Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Action Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>