force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Actions__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Actions__c</fullName>
    <label>Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Information Requested</fullName>
            </value>
            <value>
                <fullName>Recommendation Accepted</fullName>
            </value>
            <value>
                <fullName>Recommendation Denied</fullName>
            </value>
            <value>
                <fullName>Case Received by Enforcement Specialist</fullName>
            </value>
            <value>
                <fullName>All Supporting Documents Received</fullName>
            </value>
            <value>
                <fullName>Employment Status Notice Delivered</fullName>
            </value>
            <value>
                <fullName>Employment Status Response Received</fullName>
            </value>
            <value>
                <fullName>SO Hand Delivered</fullName>
            </value>
            <value>
                <fullName>SO Mailed Certified Mail</fullName>
            </value>
            <value>
                <fullName>SO Signature Certified Mail</fullName>
            </value>
            <value>
                <fullName>SO Returned by USPS</fullName>
            </value>
            <value>
                <fullName>SO Mailed Certificate of Mailing</fullName>
            </value>
            <value>
                <fullName>PAO to Licensing for Review</fullName>
            </value>
            <value>
                <fullName>PAO to Enforcement Supervisor for Review</fullName>
            </value>
            <value>
                <fullName>PAO to OLAS for Review</fullName>
            </value>
            <value>
                <fullName>PAO to  Deputy Director for Signature</fullName>
            </value>
            <value>
                <fullName>PAO Mailed Certified Mail</fullName>
            </value>
            <value>
                <fullName>PAO Signature Certified Mail</fullName>
            </value>
            <value>
                <fullName>Caretaker Notices Mailed</fullName>
            </value>
            <value>
                <fullName>PAO Returned by USPS</fullName>
            </value>
            <value>
                <fullName>PAO Mailed Certificate of Mailing</fullName>
            </value>
            <value>
                <fullName>Hearing Requested</fullName>
            </value>
            <value>
                <fullName>Case Documents Sent to AAG</fullName>
            </value>
            <value>
                <fullName>Pre-Hearing</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Report &amp; Recommendation Issued</fullName>
            </value>
            <value>
                <fullName>Report &amp; Recommendation Received by Enforcement</fullName>
            </value>
            <value>
                <fullName>AO Sent to OLAS for Signature</fullName>
            </value>
            <value>
                <fullName>AO Mailed Certified Mail</fullName>
            </value>
            <value>
                <fullName>AO Signature Certified Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>