force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_ActivityType_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_ActivityType_Formula__c</fullName>
    <formula>TEXT(CLQ_Case_Custom__r.CLQ_Activity_Type__c)</formula>
    <label>ActivityType</label>
    <type>Text</type>
</CustomField>