force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Alleged_Operation_Action__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Operation_Action__c</fullName>
    <label>Alleged Operation Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Letter sent</fullName>
            </value>
            <value>
                <fullName>Onsite visit</fullName>
            </value>
            <value>
                <fullName>Phone call</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>