force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Case_Custom__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Case_Custom__c</fullName>
    <label>Case Custom</label>
    <referenceTo>CLQ_Case_Custom__c</referenceTo>
    <relationshipLabel>Case Action Details</relationshipLabel>
    <relationshipName>Case_Action_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>