force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>