force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Date_of_Action__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Date_of_Action__c</fullName>
    <label>Date of Action</label>
    <type>Date</type>
</CustomField>