force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Notes_Internal_Use__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Notes_Internal_Use__c</fullName>
    <inlineHelpText>These notes are for internal users only and will not be displayed on portal.</inlineHelpText>
    <label>Notes (Internal Use)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>