force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Other_Action__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Other_Action__c</fullName>
    <description>If other is selected in the action taken, describe what action has been taken.</description>
    <label>Other Action</label>
    <type>TextArea</type>
</CustomField>