force-app/main/default/objects/CLQ_Case_Action_Details__c/fields/CLQ_Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Requestor_Email__c</fullName>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>