force-app/main/default/objects/CLQ_Case_Action_Details__c/recordTypes/Case_Action_Alleged_Ops.recordType-meta.xml
<RecordType>
    <fullName>Case_Action_Alleged_Ops</fullName>
    <active>true</active>
    <description>Use this record type when Case is Alleged Ops</description>
    <label>Case Action - Alleged Ops</label>
</RecordType>