force-app/main/default/objects/CLQ_Case_Action_Details__c/recordTypes/Case_Action_Enforcement.recordType-meta.xml
<RecordType>
    <fullName>Case_Action_Enforcement</fullName>
    <active>true</active>
    <label>Case Action - Enforcement</label>
</RecordType>