force-app/main/default/objects/CLQ_Case_Action_Details__c/recordTypes/CLQ_Case_Action_Enforcement_Suspension.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Case_Action_Enforcement_Suspension</fullName>
    <active>true</active>
    <label>Case Action - Enforcement Suspension</label>
</RecordType>